--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   --text: #000;
   --secondary: #282828;
   --bg: #fcfcfc;
-  --button-glow: 0;
+  --button-glow: drop-shadow(2px 4px 18px rgba(241, 74, 22, 0.25));
   --card-grey-bg: #282828;
   --card-grey-shadow: 5px 10px 18px 0px rgba(0, 0, 0, 0.25);
   --cta-shadow: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.6));
@@ -135,6 +135,7 @@
   width: 99vw;
 }
 .stack__entry {
+  color: white;
   flex-direction: column;
 }
 .stack__link {
@@ -888,13 +889,15 @@
   }
   .hero__CTA {
     max-width: 520px;
-    filter: var(--cta-shadow);
   }
   .hero__CTA--order10 {
     order: -1;
   }
   .hero__CTA--mr24 {
     margin: auto 15%;
+  }
+  .hero__CTA--arrow {
+    filter: var(--cta-shadow);
   }
   .hero__footer {
     flex-direction: row;
@@ -1061,6 +1064,7 @@
     justify-content: center;
   }
   .section__heading {
+    color: var(--text);
     font-size: 64px;
     letter-spacing: 1.28px;
   }
