--- a/style.scss
+++ b/style.scss
@@ -435,7 +435,10 @@ a:hover {
       gap: 8px;
     }
     @media (min-width: 1080px) {
-      gap: 88px;
+      gap: 32px;
+    }
+    @media (min-width: 1440px) {
+      gap: 64px;
     }
   }
   &__icons-wrapper {
