--- a/style.scss
+++ b/style.scss
@@ -391,6 +391,9 @@ a:hover {
     align-items: center;
     padding: 16px 24px;
     @media (min-width: 768px) {
+      padding: 0 12px;
+    }
+    @media (min-width: 920px) {
       padding: 0 40px;
     }
     @media (min-width: 1280px) {
