--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @use "sass/partials/card";
 @use "sass/partials/hero";
 @use "sass/partials/navbar";
+@use "sass/partials/section";
 @use "sass/partials/stack";
 @use "sass/partials/toggle";
 @use "sass/variables/variables";
