--- a/style.css
+++ b/style.css
@@ -1024,6 +1024,133 @@ a:hover {
   }
 }
 
+.section {
+  padding: 64px 24px 0px;
+}
+.section--blue {
+  border-radius: 25px;
+  background: linear-gradient(91deg, #370665 0%, #35589a 100%);
+}
+.section--padding-sm {
+  padding-top: 49px;
+}
+.section--flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.section--centered {
+  align-items: center;
+}
+.section__main {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin: 48px 28px 68px;
+}
+.section__heading {
+  color: var(--text);
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 40px; /* 86.957% */
+  letter-spacing: 0.92px;
+  text-align: center;
+}
+.section__heading--margin-bottom {
+  margin-bottom: 60px;
+}
+.section__heading--alt-order {
+  order: -1;
+  margin-bottom: 54px;
+}
+.section__heading--sm {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.12px;
+  margin-bottom: 43px;
+}
+.section__subheading {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.72px;
+}
+.section__subheading--sm {
+  text-align: center;
+  font-size: 26px;
+  letter-spacing: 0.78px;
+}
+.section__image {
+  height: 140px;
+  width: 140px;
+  object-fit: cover;
+  margin: 42px auto;
+}
+@media (min-width: 768px) {
+  .section__image {
+    width: 350px;
+    height: 350px;
+    margin: 0 auto;
+  }
+  .section__header {
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .section__heading {
+    color: var(--text);
+    font-size: 64px;
+    letter-spacing: 1.28px;
+  }
+  .section__heading--margin-bottom {
+    margin-bottom: 103px;
+  }
+  .section__heading--margin-top {
+    margin-top: 123px;
+  }
+  .section__heading--sm {
+    margin-bottom: 143px;
+  }
+  .section__heading--md {
+    margin-bottom: 15px;
+    font-size: 56px;
+    font-weight: 700;
+    letter-spacing: 1.68px;
+  }
+  .section__subheading--sm {
+    font-size: 32px;
+    font-weight: 400;
+    letter-spacing: 0.96px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1024px) {
+  .section--flex-col {
+    flex-wrap: wrap;
+    height: 725px;
+    justify-content: center;
+  }
+  .section__banner {
+    width: 50%;
+  }
+  .section__banner.banner {
+    order: -1;
+    max-width: 725px;
+    max-height: 720px;
+    margin: 140px auto;
+  }
+  .section .banner__image {
+    max-width: 725px;
+    max-height: 720px;
+  }
+  .section .banner__flag {
+    width: 166px;
+    height: 166px;
+  }
+}
+
 .stack {
   display: flex;
   gap: 20px;
