fix text color, add utility class text-white

--- a/style.css
+++ b/style.css
@@ -1309,4 +1309,8 @@ a:hover {
   .mobile-only {
     display: none;
   }
+}
+
+.text-white {
+  color: white;
 }/*# sourceMappingURL=style.css.map */
